[project]
name = "deezy"
version = "1.0.0"
description = "Dolby Encoding Engine Wrapper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymediainfo",
    "tomlkit",
    "typing-extensions>=4.15.0",
    "rich>=14.1.0",
]

[project.optional-dependencies]
build = ["pyinstaller-hooks-contrib>=2025.1", "pyinstaller>=6.9.0"]
dev = ["ruff", "pytest", "pytest-cov"]

[tool.ruff]
line-length = 88

[tool.basedpyright]
include = ["cli", "deezy"]
# ignore = [""]
typeCheckingMode = "standard"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
