[project]
name = "deezy"
version = "1.2.6"
description = "Dolby Encoding Engine Wrapper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pymediainfo",
    "tomlkit",
    "typing-extensions>=4.15.0",
    "rich>=14.1.0",
    "oslex2>=0.1.5",
]

[tool.ruff]
line-length = 88

[tool.basedpyright]
include = ["cli", "deezy"]
# ignore = [""]
typeCheckingMode = "standard"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["deezy*", "cli*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pyinstaller>=6.13.0",
    "pyinstaller-hooks-contrib>=2025.1",
]
