[project]
name = "deezy"
version = "1.3.14"
description = "Dolby Encoding Engine Wrapper"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "pymediainfo",
    "tomlkit",
    "platformdirs>=2.6.0",
    "typing-extensions>=4.15.0",
    "rich>=14.1.0",
    "oslex2>=1.0.0",
    "guessit>=3.8.0",
    "unidecode>=1.4.0",
]
authors = [{ name = "jessielw" }]
license = { file = "LICENSE" }
keywords = ["audio", "dolby", "encoding", "dee", "ddp", "atmos", "ac4"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = { "Source" = "https://github.com/jessielw/deezy", "Tracker" = "https://github.com/jessielw/DeeZy/issues" }

[project.scripts]
deezy = "deezy.__main__:main"

[tool.setuptools.package-data]
"deezy" = ["config/*.py", "config/*.toml", "icon/*", "example_json_flows/*"]

[tool.ruff]
line-length = 88
include = ["deezy.py", "version.py", "cli/*.py", "deezy/**/*.py", "tests/*.py"]

[tool.ruff.lint]
select = ["I"]

[tool.basedpyright]
include = ["deezy"]
typeCheckingMode = "standard"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["deezy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "pyinstaller>=6.13.0",
    "pyinstaller-hooks-contrib>=2025.1",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
    "pymdown-extensions>=10.16.1",
]
